--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
      <script src="https://kit.fontawesome.com/816fadddff.js" crossorigin="anonymous"></script>
 
 
-    <title>Social Media</title>
+    <title>FaceLook</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
